--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,6 +31,8 @@ language: de
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'Briefe von Goethe an Lavater
 
   Aus den Jahren 1774 bis 1783'
